Undo inserted keyframes of Linked Objects Closes Blender #42780

Closed
opened 2014-12-02 06:48:51 +01:00 by Santiago Shang · 17 comments

System Information
OpenSuse 13.1 64 Bits. Nvidia GTX660Ti 2GB

Blender Version
Broken: Blender 2.72b Hash: 9e963ae

Short description of error
When I link an object with armature , insert a key frame on this and make another movement, if I try to undo the last one...Blender Crashes. Besides if you have saved it, after the crash the animation data is lost... You can see the test in the next video:
https://www.youtube.com/watch?v=o3Ym-wA0nXs&list=UUtpL6l9--x90fBoxsRmz-Cw

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

  1. File > Link and select a group of one character rigged. (in this case I used Cookie Flex Rig.)
  2. In the outliner right click on the linked character and choose: "Link group objects to scene"
  3. Move the armature in pose mode, and insert a keyframe (LocRotScale)
  4. Move one or two bones (in pose mode).
  5. Hit Ctrl + Z to undo the last movement.
**System Information** OpenSuse 13.1 64 Bits. Nvidia GTX660Ti 2GB **Blender Version** Broken: Blender 2.72b Hash: 9e963ae **Short description of error** When I link an object with armature , insert a key frame on this and make another movement, if I try to undo the last one...Blender Crashes. Besides if you have saved it, after the crash the animation data is lost... You can see the test in the next video: https://www.youtube.com/watch?v=o3Ym-wA0nXs&list=UUtpL6l9--x90fBoxsRmz-Cw **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps 1. File > Link and select a group of one character rigged. (in this case I used Cookie Flex Rig.) 2. In the outliner right click on the linked character and choose: "Link group objects to scene" 3. Move the armature in pose mode, and insert a keyframe (LocRotScale) 4. Move one or two bones (in pose mode). 5. Hit Ctrl + Z to undo the last movement.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @santiagoshang

Added subscriber: @santiagoshang
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Hey @santiagoshang,
In the bug report template it says: "Based on a (as simple as possible) attached .blend file with minimum amount of steps" - could you provide such a .blend file, so we don't have to do this ourself? This really helps us to work efficiently.

Thanks for the report!

Hey @santiagoshang, In the bug report template it says: "Based on a (as simple as possible) attached .blend file with minimum amount of steps" - could you provide such a .blend file, so we don't have to do this ourself? This really helps us to work efficiently. Thanks for the report!
Author

This comment was removed by @santiagoshang

*This comment was removed by @santiagoshang*
Author

Files.tar.gz
I attached two files inside the tarball... The original object file is the object to be linked. and The Linked Object file is the blend with that object linked inside the scene... in this case I used the lady bug. Thanks!

[Files.tar.gz](https://archive.blender.org/developer/F128474/Files.tar.gz) I attached two files inside the tarball... The original object file is the object to be linked. and The Linked Object file is the blend with that object linked inside the scene... in this case I used the lady bug. Thanks!

Added subscriber: @CarlosAndresOrozcoPalacio

Added subscriber: @CarlosAndresOrozcoPalacio

Hi this bug, i do the same step and is the same thing in my machine, here the Spec:

Os: Windows 8.1 Update 1 64Bits
GPU: Sapphire HD 7770 1G OC Edition

Hi this bug, i do the same step and is the same thing in my machine, here the Spec: Os: Windows 8.1 Update 1 64Bits GPU: Sapphire HD 7770 1G OC Edition

Added subscriber: @mont29

Added subscriber: @mont29

Added subscriber: @Sergey

Added subscriber: @Sergey

Well, you should not be able to go into pose mode of a linked armature. At all. And i can not reproduce it here.

I'm not sure how to use your file from the previous post -- it just gives me linking errors. So for demonstration files please create files with as few objects as possible (i guess you having couple of bones in a group is already enough). And make sure they use proper relative paths and no extra libs are in use.

Also, please test latest 2.73rc1 build from download.blender.org/release/Blender2.73

Well, you should not be able to go into pose mode of a linked armature. At all. And i can not reproduce it here. I'm not sure how to use your file from the previous post -- it just gives me linking errors. So for demonstration files please create files with as few objects as possible (i guess you having couple of bones in a group is already enough). And make sure they use proper relative paths and no extra libs are in use. Also, please test latest 2.73rc1 build from download.blender.org/release/Blender2.73
Author

Hi Sergey!... Merry Xmas... Well, I made other files with the specs that you told me. This time on iMac: Intel Core 2 Duo - ATI,RadeonHD2600. With blender 2.72 and blender 2.73RC1 and I got the same result. with the files of the lady-bug and the new files made with your specs. Thanks.

files_sergey_specs.zip

Hi Sergey!... Merry Xmas... Well, I made other files with the specs that you told me. This time on iMac: Intel Core 2 Duo - ATI,RadeonHD2600. With blender 2.72 and blender 2.73RC1 and I got the same result. with the files of the lady-bug and the new files made with your specs. Thanks. [files_sergey_specs.zip](https://archive.blender.org/developer/F133687/files_sergey_specs.zip)

Ah, that's because armature is saved in the pose mode. It should be reset to object mode on linking because as said, linked data is forbidden for modification.

Ah, that's because armature is saved in the pose mode. It should be reset to object mode on linking because as said, linked data is forbidden for modification.
Sergey Sharybin self-assigned this 2014-12-26 15:10:01 +01:00

This issue was referenced by 016bbc8793

This issue was referenced by 016bbc879329390041909d524e3b41834b6853d3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 016bbc8793.

Closed by commit 016bbc8793.

This issue was referenced by fe3e000511

This issue was referenced by fe3e000511113213fc4dd2d641ee6e1962354977
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42780
No description provided.