Fix T42780: Object linking allows to have linked armatures in pose mode

This isn't so bad for until one goes re-posing the armature and then uses undo.

It is the same issue as with edit mode which was solved back in the days.